fixing minor breadcrumb layout issue

--- a/assets/_styles/components/breadcrumb.scss
+++ b/assets/_styles/components/breadcrumb.scss
@@ -15,6 +15,9 @@
   &:last-child a {
     background: none;
   }
+  a {
+    padding-right: 1em;
+  }
 }
 
 .breadcrumbs a {
